@@ -336,7 +336,7 @@ Dextrous is a trait possessed only by Elves. The Elven people are known for thei
 [topic]
 id=traits_healthy
 title= _"Healthy"
-text= _"Renowned for their vitality, some dwarves are sturdier than others and recover more quickly when resting."
+text= _"Renowned for their vitality, some dwarves are sturdier than others and can rest even when travelling."
 [/topic]
 
 
