@@ -34,6 +34,8 @@ Version 1.3.3+svn:
   * Unit changes and balancing
 
   * Multiplayer
+   * healthy units now can rest even when they move instead of having a double
+     bonus.
 
   * Miscellaneous and bugfixes
 
