@@ -13,6 +13,8 @@ Version 1.3.3+svn:
       Spanish, Swedish
  * units
    * added a wolf "monster"
+   * healthy units now can rest even when they move instead of having a double
+     bonus.
  * WML engine
    * removed deprecated keys image_healing and image_halo_healing
    * empty user_description now remains empty unless generate_description set
